<resources>
    <string name="app_name">Currency Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="clear">C</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="source_currency">USD</string>
    <string name="destination_currency">NGN</string>
    <string name="division">/</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="min_currency_display">10</string>
    <string name="max_currency_display">30</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_welcome">Currency Calculator</string>
    <string name = "progress_report">Downloading Currencies Exchange Rates</string>
    <string name = "progress_completion">Download completed</string>
    <string name = "progress_error">No internet Connection</string>
</resources>
