<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical">

    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_background"
    android:layout_weight="2">

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/clear"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:textColor="@color/button_text_color"
                android:background="@drawable/button_style"
                android:text="@string/clear"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <Button
                android:id="@+id/open_bracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/open_bracket"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/close_bracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/close_bracket"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <ImageButton
                android:id="@+id/del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:background="@drawable/button_style"
                android:text="DEL"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:layout_gravity="center_vertical"
                android:onClick="display"/>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/seven"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <Button
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/eight"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/nine"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/division"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/four"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <Button
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/five"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/six"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/times"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/times"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/one"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <Button
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/two"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/three"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/minus"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/zero"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <Button
                android:id="@+id/decimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/decimal"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <Button
                android:id="@+id/equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:paddingBottom="@dimen/button_padding"
                android:text="@string/equals"
                android:onClick="display"/>


            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:paddingBottom="@dimen/button_padding"
                android:text="@string/plus"
                android:onClick="display"/>
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/source_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/source_currency"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/source_currency"
                android:paddingBottom="@dimen/button_padding"
                android:layout_gravity="center_vertical"
                android:onClick="display"/>

            <Button
                android:id="@+id/destination_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/button_textsize"
                android:background="@drawable/button_style"
                android:textColor="@color/button_text_color"
                android:text="@string/destination_currency"
                android:paddingBottom="@dimen/button_padding"
                android:onClick="display"/>
        </TableRow>
    </TableLayout>
    </LinearLayout>